--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 server.port=9595
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1 
 spring.datasource.name= springboot
 spring.datasource.url= jdbc:mysql://localhost:3306/smartcontactmanager
 spring.datasource.username= root
