--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,6 @@ server.port=9595
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1 
 spring.datasource.name= springboot
-spring.datasource.url= jdbc:mysql://localhost:3306/smartcontactmanager
-spring.datasource.username= root
-spring.datasource.password= Tanu@123#!#
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.profiles.active=${ENV:dev}
